Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
-
Bug fixes:
~~~~~~~~~~
- Used "Products.CMFCore.permissions" instead of deprecated
  "Products.CMFCore.CMFCorePermissions".
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- manage_addCPSDirectory() takes a **kw args that is propagated to the cls constructor